[gd_scene load_steps=5 format=3 uid="uid://character_selection_scene"]

[ext_resource type="Script" path="res://scripts/ui/character_selection.gd" id="1_char_select"]
[ext_resource type="Texture2D" path="res://assets/sprites/player.png" id="2_blue_blaster"]
[ext_resource type="Texture2D" path="res://assets/sprites/space-dragon-1.png" id="3_space_dragon"]
[ext_resource type="Texture2D" path="res://assets/sprites/cosmic-cat-2.png" id="4_cosmic_cat"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_char_select")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.02, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 96
text = "Select Your Ship"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="CharacterGrid" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 80
alignment = 1

[node name="BlueBlasterButton" type="Button" parent="CenterContainer/VBoxContainer/CharacterGrid"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 36
icon = ExtResource("2_blue_blaster")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
text = "Blue Blaster"

[node name="SpaceDragonButton" type="Button" parent="CenterContainer/VBoxContainer/CharacterGrid"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 36
icon = ExtResource("3_space_dragon")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
text = "Star Dragon"

[node name="CosmicCatButton" type="Button" parent="CenterContainer/VBoxContainer/CharacterGrid"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 36
icon = ExtResource("4_cosmic_cat")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
text = "Celestial Cat"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 48
text = "Difficulty"
horizontal_alignment = 1

[node name="DifficultyContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40
alignment = 1

[node name="NormalButton" type="Button" parent="CenterContainer/VBoxContainer/DifficultyContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Normal
3 Lives"

[node name="HardButton" type="Button" parent="CenterContainer/VBoxContainer/DifficultyContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 36
text = "Hard
1 Life"

[node name="Spacer3" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 48
text = "Back"

[node name="OKButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "OK"
